# autotitle.py

./: .gitignore  README.md  TODO.md  pyproject.toml
autotitle/: __init__.py  logger.py  main.py  utils.py
autotitle/db/detective-conan/: fillers.txt  names.txt
test/: main.py
