[project]
name = "autotitle.py"
version = "0.0.0"
description = "A tool for renaming episodes with proper titles"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "soymadip" }]
requires-python = ">=3.13"
dependencies = []
classifiers = [
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]

[project.urls]
"Bug Tracker" = "https://github.com/soymadip/autotitle/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
autotitle = ["db/*/*.txt", "db/*/*.json", "db/*/__init__.py"]
